force-app/main/default/objects/Campaign_Expense__c/Campaign_Expense__c.object-meta.xml
<CustomObject>
    <label>Campaign Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>