force-app/main/default/objects/Campaign_Expense__c/fields/Claim_Tax__c.field-meta.xml
<CustomField>
    <fullName>Claim_Tax__c</fullName>
    <description>For UK Sales and Marketing Tracker VAT can be claimed for each expense</description>
    <inlineHelpText>Select &apos;Yes&apos; to claim VAT,GST etc</inlineHelpText>
    <label>Claim Tax?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>