force-app/main/default/objects/Campaign_Expense__c/fields/Cost_Centre_Account__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_Account__c</fullName>
    <description>To be filled when Campaign is completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Centre/ Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>