force-app/main/default/objects/Campaign_Expense__c/fields/Invoice_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Process_Date__c</fullName>
    <description>Invoice process date ,mainly for UK Sales and Marketing Tracker</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Process Date</label>
    <type>Date</type>
</CustomField>