force-app/main/default/objects/Campaign_Expense__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>Invoice_Process_Date__c  &lt;=  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>