force-app/main/default/objects/Campaign_Expense__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Payment Type,mainly for UK Sales and Marketing Tracker</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Staff Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>