force-app/main/default/objects/Campaign_Expense__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>IF(AND (
   ISPICKVAL(CurrencyIsoCode,&quot;GBP&quot;),
   ISPICKVAL( Claim_Tax__c  , &quot;Yes&quot;)), &quot;20%&quot; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <type>Text</type>
</CustomField>