force-app/main/default/objects/Campaign_Expense__c/fields/Total_Expenses_so_far__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_so_far__c</fullName>
    <description>Total Travel Expense</description>
    <formula>Expense_type_1__c  +  Travel_Expense_2__c  +  Travel_Expense_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses so far</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>